Market.Inventory/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: inventory-clusterip-service
spec:
  type: ClusterIP
  selector:
    app: inventory-service
  ports:
  - name: inventory-service
    protocol: TCP
    port: 8080
    targetPort: 8080
