Market.Inventory/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-inventory-srv
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
  - host: acme.com
    http:
      paths:
      - path: /api/products
        pathType: Prefix
        backend:
          service:
            name: inventory-clusterip-service
            port:
              number: 8080
